--- a/src/specs/Specs.Component.MediaLogue/app.config
+++ b/src/specs/Specs.Component.MediaLogue/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="BaseUrl" value="http://localhost/MediaLogue.Api.WebHost/"/>
+    <add key="BaseUrl" value="http://localhost/MediaLogue.Api.WebHost"/>
   </appSettings>
   <connectionStrings>
     <add name="MediaLogueConnectionStringLocal" connectionString="Server=.;Database=MediaLogueDB-IntegrationSpecs;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
